# connected-diagnostics

./: .env.example  .gitignore  .python-version  Makefile  README.md  ab_test_results.json  alembic.ini  check_p1603_detail.py  cookies_cf_auto.json  docker-compose.yml  eval-fix.sh  eval_history.json  eval_results.json  link_connector_pinouts.py  link_solutions_to_procedures.py  pyproject.toml  run_full_ingest.sh  test_ab_extraction.py  trace_p1603_lean.py
.cursor/plans/: diagnostic_knowledge_system_c18065b2.plan.md  workflows.md
backend/app/core/: config.py
backend/app/db/: init_db.py  neo4j_client.py  postgres.py
backend/app/eval/: runner.py  test_cases.yaml
backend/app/graph/: mutations.py  queries.py  schema.py
backend/app/ingestion/: chunker.py  enrichment.py  extractor.py  graph_builder.py  pdf_parser.py  xref_resolver.py
backend/app/models/: __init__.py
backend/app/qa/: analyzer.py  fixes.py  tracker.py
backend/app/services/: contribution_service.py  diagnostic_engine.py  estimate_service.py  parts_catalog.py  search_service.py  shop_rules.py
backend/app/services/llm/: client.py  prompts.py
backend/cli/: chat.py  contribute.py  enrich.py  eval.py  ingest.py  qa.py  scrape_parts.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_page_index.py  003_contributions.py  004_parts_catalog.py  005_parts_region_price_type.py  006_shop_rules.py  007_shop_rule_contribution_type.py
scripts/debug/: check_p1603.py  walk_p1603.py
scripts/tests/: gemini_test_results.json  test_gemini_extraction.py
